# divezz

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: auth.py  expenses.py  groups.py  settlements.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: expense.py  group.py  settlements.py  user.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  expense.py  expense_share.py  group.py  membership.py  payment.py  settlement.py  user.py
backend/app/db/schemas/: auth.py  expense.py  expense_share.py  group.py  membership.py  payment.py  user.py
backend/app/tests/: conftest.py  test_auth.py  test_expenses.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 9063b316f0ea_add_photo_url_to_groups.py  93e8a93afc4e_add_hashed_password_to_users.py  a966d79daddb_initial.py  c3f1b2a9d4e5_change_total_value_to_float.py  d4f7a1b2c3d4_add_membership_status_and_email.py  e1f2a3b4c5d6_add_role_to_memberships.py  f7a8b9c0d1e2_add_role_and_updated_at_to_memberships.py  gd90f8g7sdf89_create_expense_shares.py
backend/scripts/: inspect_metadata.py  list_mappings.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: auth.ts  balances.ts  client.ts  expenses.ts  (+7 more)
(+32 files in other folders)
